Updated filepath to image - filepath is case sensitive and was using lowercase file extension

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="section">
     <div class="container">
       <figure class="image doug-image block">
-          <img src ="resources/doug.jpg"> 
+          <img src ="resources/doug.JPG"> 
       </figure>
       <div class="container about-me has-text-centered">
         <div class="box">
