--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="box">
           <span class="material-icons"> work </span>
-            <span>Software Engineer at Amazon. Formerly at Anki. </span>
+            <span>Software Engineer at Stripe. Formerly at Amazon, Anki. </span>
         </div>
         <div class="box">
           <span class="material-icons">school </span>
